<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".View.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/welcome_to_scopone"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/welcome_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/please_login_in_or_register"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="200dp"
                android:layout_marginRight="200dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/register"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/login"
                    tools:visibility="visible" />
            </LinearLayout>

            <TextView
                android:id="@+id/or_login_page2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/login_with_google"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                android:contentDescription="@string/login_with_google"
                android:onClick="onClick"
                app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>